# nano_th_hr

./: README.md  pyproject.toml
nano_th_hr/: hooks.py  modules.txt
nano_th_hr/api/: build_department_distribution.py
nano_th_hr/nano_thorah_hr/doctype/department_and_center/: department_and_center.js  department_and_center.json  department_and_center.py  test_department_and_center.py
nano_th_hr/nano_thorah_hr/doctype/department_revenue_distribution/: department_revenue_distribution.js  department_revenue_distribution.json  department_revenue_distribution.py  test_department_revenue_distribution.py
nano_th_hr/nano_thorah_hr/doctype/department_revenue_distribution_item/: department_revenue_distribution_item.json  department_revenue_distribution_item.py
nano_th_hr/nano_thorah_hr/doctype/department_unit/: department_unit.js  department_unit.json  department_unit.py  test_department_unit.py
nano_th_hr/nano_thorah_hr/doctype/job_classification/: job_classification.js  job_classification.json  job_classification.py  test_job_classification.py
nano_th_hr/nano_thorah_hr/doctype/job_status/: job_status.js  job_status.json  job_status.py  test_job_status.py
nano_th_hr/nano_thorah_hr/doctype/jobs_type/: jobs_type.js  jobs_type.json  jobs_type.py  test_jobs_type.py
nano_th_hr/nano_thorah_hr/workspace/الشؤن_الادارية/: الشؤن_الادارية.json
